[package]
name = "speedbag"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
clap = { version = "3.1.8", features = ["derive", "color"] }
clap_complete = "3.1.1"
clap-verbosity-flag = "1.0.0"

[dependencies]
clap = { version = "3.1.8", features = ["derive", "color"] }
log = "0.4.16"
simplelog = "0.11.2"
clap-verbosity-flag = "1.0.0"
tokio = "1.18.0"
chrono = "0.4.19"
rocket = "0.5.0-rc.2"
itertools = "0.10.3"
