[package]
name = "speedbag"
version = "0.0.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
clap = { version = "~3.1.18", features = ["derive", "color"] }
clap_complete = "~3.1.4"
clap-verbosity-flag = "~1.0.0"

[dependencies]
clap = { version = "~3.1.18", features = ["derive", "color"] }
log = "~0.4.17"
simplelog = "~0.12.0"
clap-verbosity-flag = "~1.0.0"
tokio = "~1.19.2"
chrono = "~0.4.19"
rocket = "~0.5.0-rc.2"
itertools = "~0.10.3"
